<resources>
    <string name="app_name">Movies App</string>
    <string name="titleGenreNames">TextView</string>
    <string name="genres">Genres</string>
    <string name="production_countries">Production Countries</string>
    <string name="poster">poster</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="videos">Videos</string>
    <string name="overview">Overview</string>
    <string name="cast">Cast</string>
    <string name="crew">Crew</string>
    <string name="search">Search</string>
    <string name="search_hint">Search movies</string>
    <string name="home">Home</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="network">Network</string>
    <string name="my_movies">My movies</string>
    <string name="movieposter">MoviePoster</string>
    <string name="peopleimg">peopleImg</string>
    <string name="biography">Biography</string>
    <string name="in_movies">Movies</string>
    <string name="peoples">Peoples</string>
    <string name="users">Users</string>
    <string name="submit">Submit</string>
    <string name="preference_file_key">authentication</string>
    <string name="pseudo">pseudo</string>
    <string name="email">email</string>
    <string name="token">token</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="follow">Follow</string>
    <string name="account">Account</string>
</resources>
