<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/listMoviesFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home_white_100dp"
        />
    <item
        android:id="@+id/userListFragment"
        android:title="@string/network"
        android:icon="@drawable/ic_network_white_100dp"
        />
    <item
        android:id="@+id/listLikesMoviesFragment"
        android:title="@string/my_movies"
        android:icon="@drawable/ic_movies_white_100dp"
        />
    <item
        android:id="@+id/listPeoplesFragment"
        android:title="@string/peoples"
        android:icon="@drawable/ic_person_white_100dp"
        />
    <item
        android:id="@+id/searchFragment"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_100dp"/>

</menu>