<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:singleLine="true"
        android:imeOptions="actionDone"/>

    <RadioGroup
        android:id="@+id/group_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_movies"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/radio_peoples"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peoples"/>
        <RadioButton
            android:id="@+id/radio_users"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users"/>

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>


    </RadioGroup>

</LinearLayout>